css para premios

--- a/premios.html
+++ b/premios.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <title>Prêmios do Sorteio  - Enchei-vos</title>
+    <link rel="stylesheet" href="./premios.css">
+    <title>Prêmios do Sorteio - Enchei-vos</title>
 </head>
+
 <body>
+    <nav>
+        <ul>
+            <li>Voltar aos Números</li>
+        </ul>
+    </nav>
+    <main>
+        <section>
+            <div class="card">
+                <img src="./assets/img.avif" alt="1º premio">
+                <p>TEXTO DEMOSNTRATIVO</p>
+            </div>
+            <div class="card">
+                <img src="./assets/img.avif" alt="2º premio">
+                <p>TEXTO DEMOSNTRATIVO</p>
+            </div>
+            <div class="card">
+                <img src="./assets/img.avif" alt="3º premio">
+                <p>TEXTO DEMOSNTRATIVO</p>
+            </div>
+        </section>
+
+    </main>
 </body>
+
 </html>
