conexão entre as páginas

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         
     </main>
     <footer>
-        <p class="copy"><a href="http://junior.dev.br" target="_blank" rel="noopener noreferrer">Developed by Junior</a> </p> 
+        <p class="copy"><a href="./premios.html">Ver Premios</a> </p> 
 
 
     </footer>
