--- a/premios.html
+++ b/premios.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <ul>
-            <li>Voltar aos Números</li>
+            <li><a href="./index.html">Voltar aos Números</a></li>
         </ul>
     </nav>
     <main>
