--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
         <div class="numbers">
             <div class="title">
-                <h1>NÚMEROS DO SORTEIO</h1>
+                <h1>R$3 CADA NÚMERO <br/> OU 2 POR R$5</h1>
                 <div class="guia">
                     <span id="guia" class="vendido">VENDIDO</span>
                     <span id="guia">DISPONIVEL</span>
