--- a/premios.html
+++ b/premios.html
@@ -18,15 +18,11 @@
         <section>
             <div class="card">
                 <img src="./assets/img.avif" alt="1º premio">
-                <p>TEXTO DEMOSNTRATIVO</p>
+                <p>1º SORTEIO: UMA NANINHA</p>
             </div>
             <div class="card">
                 <img src="./assets/img.avif" alt="2º premio">
-                <p>TEXTO DEMOSNTRATIVO</p>
-            </div>
-            <div class="card">
-                <img src="./assets/img.avif" alt="3º premio">
-                <p>TEXTO DEMOSNTRATIVO</p>
+                <p>2º SORTEIO UM TERÇO</p>
             </div>
         </section>
 
